--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,11 +19,7 @@
             <main class="main">
                 <div class="indexWrapper">
                     <div>
-<<<<<<< Updated upstream
                         <img src="images/glasses.jpg" style="max-width:300px;border-radius:25%;">
-=======
-                        <img src="images/glasses.jpg" style="max-width: 300px; border-radius:25%;">
->>>>>>> Stashed changes
                         <h1 class="indexHeader">{{ .Site.Params.author }}</h1>
                     </div>
                     {{ if isset .Site.Params "social" }}
@@ -34,7 +30,7 @@
         </div>
 
 
-        {{/*  {{ partial "footer.html" . }}  */}}
+        {{ partial "footer.html" . }}
     </div>
 
 </body>
