--- a/layouts/index.html
+++ b/layouts/index.html
@@ -30,7 +30,7 @@
         </div>
 
 
-        {{ partial "footer.html" . }}
+        {{/*  {{ partial "footer.html" . }}  */}}
     </div>
 
 </body>
