--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,7 +19,7 @@
             <main class="main">
                 <div class="indexWrapper">
                     <div>
-                        <img src="images/glasses.jpg" style="max-width:300px;border-radius:25%;">
+                        <img src="images/me.jpg" style="max-width:300px;border-radius:25%;">
                         <h1 class="indexHeader">{{ .Site.Params.author }}</h1>
                     </div>
                     {{ if isset .Site.Params "social" }}
